--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=demo
+server.port=8081
+
+### ????????? [??]???????????????????????????????????"???????"?"??????"???????????
+xxl.job.admin.addresses=http://127.0.0.1:8080/xxl-job-admin
+### ?????TOKEN [??]???????
+xxl.job.accessToken=default_token
+### ???AppName [??]??????????????????????
+xxl.job.executor.appname=mt360
+### ????? [??]???????????????????????? ?IP:PORT? ????????????????????????IP??????????
+xxl.job.executor.address=
+### ???IP [??]???????????IP????????????IP??IP????Host?????????????? "?????" ? "???????????"?
+xxl.job.executor.ip=
+### ?????? [??]?????0???????????9999?????????????????????????
+xxl.job.executor.port=9999
+### ??????????????? [??] ????????????????????????
+xxl.job.executor.logpath=D:/data/applogs/xxl-job/jobhandler
+### ??????????? [??] ? ????????, ???????3???; ??, ?-1, ?????????
+xxl.job.executor.logretentiondays=30
